# edugraph-tools

./: .dockerignore  .gitignore  README.md  compose.yaml  core-ontology.properties  core-ontology.ttl
apps/: .env  .env.example  Dockerfile  app.py  env.example  pyproject.toml
apps/api/: __init__.py  classification_cache.py  ontology_serializer.py  routes.py
apps/edugraph/: __init__.py
apps/semantic/: __init__.py  __main__.py  classification_cache.py  context_builder.py  gemini_classifier.py  gemini_context_cache.py  gemini_file_storage.py  gemini_prompt_strategy.py  gimini_context_builder.py  ontology_helper.py  ontology_loader.py  ontology_util.py
apps/semantic/classifiers/: __init__.py  classifier_split.py  context_builder.py  merged_classifier.py  split_classifier.py  split_classifier_gemini_with_serialized_taxonomies_v1.py  split_prompt_classifier.py  split_prompt_classifier_v2.py  split_prompt_strategy_gemini.py  split_prompt_strategy_gemini_v2.py
apps/semantic/classifiers/failed_approaches/: gemini_context_cache.py  split_prompt_classifier_v2.py  split_prompt_classifier_v3.py  split_prompt_classifier_v4.py
apps/semantic/classifiers/strategies/: classifier_embeddings_gemini_v1.py  classifier_multimodal_vertex_v1.py  classifier_split_gemini_with_serialized_taxonomies_v1.py  classifier_unified_gemini_with_turtle_taxonomy_v1.py
apps/semantic/embeddings/: __main__.py  add_label.py  embed.py  embed_files.py  embed_ontology.py  embed_taxonomy.py  embedder_google.py  embedding_builder.py  embedding_strategy.py  find_by_image.py
apps/tests/: entity_mock.py  test_ontology_util.py
apps/tests/api/: test_classication_cache.py  test_ontology_serializer.py
apps/tests/semantic/: test_classification_cache.py  test_ontology_serializer.py  test_ontology_util.py
apps/tests/test_data/: test-ontology.rdf
templates/: define-abilities.txt
(+35 files in other folders)
