[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "edugraph"
description = "EduGraph App"
version = "0.1.0"
authors = ["Christian Bick <christian.bick@bitsuppliers.com>"]


[tool.poetry.dependencies]
python = "^3.12"
owlready2 = "^0.46"
flask = "^3.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.3"
flask-cors = "^5.0.0"
waitress = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
assertpy = "^1.1"

